Whitelist features for Java 8 instead of hacking Java 12 target (#2)